<resources>
    <string name="app_name">Sample Spotify</string>
    <string name="title_activity_main">Sample Spotify</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="no_artists">No Results :(</string>
    <string name="top_tracks">Top Tracks</string>
    <string name="artist">Artist</string>
    <string name="album">Album</string>
    <string name="song">Song</string>
    <string name="track_end_time">0:30</string>
    <string name="track_start_time">0:00</string>
    <string name="notification_loading">%1$s (Loading)</string>
    <string name="notification_playing">%1$s (Playing)</string>
    <string name="notification_paused">%1$s (Paused)</string>
</resources>
