<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="@dimen/activity_horizontal_margin"
              android:orientation="vertical"
              tools:context="com.spotify.sdliles.samplespotify.UI.PlayerFragment">

    <TextView android:id="@+id/player_artist_name"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="center_horizontal"
              android:textStyle="bold"
              tools:text="@string/artist" />

    <TextView android:id="@+id/player_album_name"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="center_horizontal"
              tools:text="@string/album" />

    <ImageView android:id="@+id/player_album_art"
               android:layout_weight="1"
               android:layout_width="match_parent"
               android:layout_height="0dp" />

    <TextView android:id="@+id/player_track_name"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="center_horizontal"
              android:textStyle="bold"
              tools:text="@string/song" />

    <SeekBar android:id="@+id/player_track_progress_seek_bar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:progress="0" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
                android:id="@+id/player_track_current_progress"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/track_start_time" />

        <TextView
                android:id="@+id/player_track_duration"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/track_end_time" />

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <ImageButton android:id="@+id/player_previous_button"
                     android:layout_weight="1"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:padding="20dp"
                     android:src="@android:drawable/ic_media_previous" />

        <ImageButton android:id="@+id/player_play_pause_button"
                     android:layout_weight="1"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:padding="20dp"
                     android:src="@android:drawable/ic_media_play" />

        <ImageButton android:id="@+id/player_next_button"
                     android:layout_weight="1"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:padding="20dp"
                     android:src="@android:drawable/ic_media_next" />

    </LinearLayout>

</LinearLayout>